@@ -21,7 +21,9 @@
    xchat_get_info.
  - Fix: Unload, then reload a plugin on FreeBSD fails (Kevin Leung).
  - Plugins should now work on HPUX too.
- - Perl-plugin changes <fixme> (Lian Situ).
+ - Perl-plugin: Fixes for 3 arg version of emit_print, unhooking the
+   same hook multiple times and get_list returning correct values for
+   address32 field (Lian Situ).
  - Make menu keybindings work when the menubar is hidden on GTK 2.4.
  - Support the new GTK 2.4 file chooser dialog.
  - 
